# supabase-desktop

./: .eslintrc.cjs  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: main.tsx  supabase.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  error.rs  main.rs  supabase.rs  utils.rs
src/components/: ApiKeyDialog.tsx  ProjectGrid.tsx  ResizablePane.tsx  Spinner.tsx  Topbar.tsx
src/components/ResourceTable/: ResourceTable.tsx  index.ts
src/lib/: ApiClient.tsx  AppData.ts  SupabaseMagementApi.ts  UiStore.ts  make-update.ts  useAwaitableComponent.ts
src/pages/: InitialPage.tsx  routes.ts
src/pages/project/: EmptyProjectPage.tsx  ResourcePage.tsx  index.tsx  utils.ts
