[package]
name = "supabase-desktop"
version = "0.0.0"
description = "Supabase Desktop"
authors = ["Jake Correa"]
license = "MIT"
repository = "https://github.com/jkcorrea/supabase-desktop"
edition = "2021"
rust-version = "1.57"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["api-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch = "dev" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.5" }
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
base64 = "0.20.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
